--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -1,3 +1,13 @@
-h1 {
-    color: #3f0;
+.resume-link {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #8963BA;
+    color: #000;  
+    border: 2px solid #8963BA;
+    border-radius: 35px;
+}
+
+.resume-link:hover {
+    background-color: #694794; 
+    border-color: #694794; 
 }
