--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -11,4 +11,19 @@
     background-color: #694794; 
     border-color: #694794; 
 }
- 
+h1 {
+    color: #000;
+    font-family: verdana;
+    font-size: 300%;
+    text-align: center; 
+} 
+  h2{
+      color: #000
+      font-family: Bordini;
+      font-size: 200%;
+}
+  p  {
+    color: #000;
+    font-family: courier new;
+    font-size: 160%;
+}
