--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -39,7 +39,7 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #F05D23;
+    background-color: #6BD425;
     top: 100%;
     left: 0;
     width: 100%;
