--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -45,3 +45,9 @@ p {
     color: #000;
     font-size: 190%;
   }
+  
+  p::before {
+    content: ""; 
+     display: inline-block; 
+     width: 20px;;
+ }
