--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -41,4 +41,14 @@ p {
     border-radius: 35px;
   }
 
+  .container p:not(:first-child) {
+    content: ""; 
+    display: inline-block; 
+    width: 20px;
+}
+
+p::first-letter {
+    color: #F62DAE;
+    font-size: 250%;
+}
 
