--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -41,13 +41,13 @@ p {
     border-radius: 35px;
   }
 
- p indent{
+ p indent {
     content: ""; 
     display: inline-block; 
     width: 20px;
 }
 
-p::first-letter {
+p::first-letter bigLetter {
     color: #F62DAE;
     font-size: 250%;
 }
