--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -42,9 +42,7 @@ p {
   }
 
  p.indent {
-    content: ""; 
-    display: inline-block; 
-    width: 20px;
+    text-indent: 30pt;
 }
 
 p.bigLetter::first-letter {
