--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -16,7 +16,7 @@ h1 {
     color: #000;
     font-family: verdana;
     font-size: 300%;
-    padding-top: 40;
+    padding-top: 40px;
     text-align: center; 
 } 
 
