--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -60,3 +60,41 @@
     display: block;
   }
   
+  .hamburger {
+    display: none; 
+    cursor: pointer;
+    padding: 15px;
+    float: right;
+    background-color: #F05D23;
+    border: none;
+  }
+  
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    margin: 6px 0;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .hamburger {
+      display: block;
+    }
+  
+    .entireBar {
+      display: none; 
+    }
+  
+    .dropdown-content {
+      position: relative; 
+      background-color: #F05D23; 
+    }
+  
+    .dropdown-content ul li {
+      text-align: left;
+    }
+  
+    .navbar.active .entireBar {
+      display: block;
+    }
+  }
