--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -67,6 +67,10 @@
     float: right;
     background-color: #F05D23;
     border: none;
+    position: fixed;
+    top: 0; 
+    left: 0; 
+    z-index: 999; 
   }
   
   .hamburger .line {
