--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -16,7 +16,7 @@
   }
   
   li {
-    float: right;
+    float: left;
     display: inline;
   }
   
@@ -64,7 +64,7 @@
     display: none; 
     cursor: pointer;
     padding: 15px;
-    float: right;
+    float: left;
     background-color: #F05D23;
     border: none;
     position: fixed;
