--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -96,8 +96,8 @@
       left: 0;
       width: 100%;
     }
-    .navbar ul li "{"
-      diplay: block;
+    .navbar ul li {
+      display: block;
     }
 
     .navbar ul li a:hover {
