--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -96,6 +96,10 @@
       left: 0;
       width: 100%;
     }
+    .navbar li{
+      display: block;
+    }
+    
     .navbar ul li {
       display: block;
     }
