--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -61,6 +61,9 @@ p.bigLetter::first-letter {
       color: black;
     }
   
+    h1 {
+      font-family: 'Workbench', sans-serif;
+    }
 
     body,
     p,
@@ -80,8 +83,7 @@ p.bigLetter::first-letter {
           url('https://fonts.gstatic.com/s/workbench/v11/LYjbdGbiklMoFIHNyTz0pEz5cO8Mk0o.woff') format('woff');
     }
 
-  h1 {
-    font-family: 'Workbench', sans-serif;
+
   }
 
     body {
