--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -62,16 +62,15 @@ p.bigLetter::first-letter {
     }
     
     @font-face {
-      font-family: 'Workbench';
-      font-style: normal;
+      font-family: 'Yellowtail';
+      src: url(https://fonts.google.com/share?selection.family=Yellowtail) format('woff2'),
       font-weight: 400;
-      src: local('Workbench Regular'), local('Workbench-Regular'),
-          url('https://fonts.gstatic.com/s/workbench/v11/LYjbdGbiklMoFIHNyTz0pEz5cO8Mk0o.woff2') format('woff2'),
-          url('https://fonts.gstatic.com/s/workbench/v11/LYjbdGbiklMoFIHNyTz0pEz5cO8Mk0o.woff') format('woff');
+      font-style: normal;
     }
+    
 
     h1 {
-      font-family: 'Workbench', sans-serif;
+      font-family: 'Yellowtail', cursive;
     }
 
     body,
