--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -95,7 +95,7 @@ p.bigLetter::first-letter {
 
 
     .smallimage {
-      width: 200px;
-      height: auto;
+      width: 20px;
+      height: 20px;
     }
   
