--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -95,7 +95,7 @@ p.bigLetter::first-letter {
 
 
     .smallimage {
-      width: 5px;
-      height: 5px;
+      width: 5%;
+      height: 5%;
     }
   
