--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -99,3 +99,12 @@ p.bigLetter::first-letter {
       height: 5%;
     }
   
+
+
+    /* style.css */
+
+footer {
+  background-image: url('webdevelopment/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'; 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+}
