--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -100,11 +100,9 @@ p.bigLetter::first-letter {
     }
   
 
-
-    /* style.css */
-
+]
 footer {
-  background-image: url('webdevelopment/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'; 
+  background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'; 
   background-size: cover; 
   background-repeat: no-repeat; 
 }
