--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -95,8 +95,8 @@ p.bigLetter::first-letter {
 
 
     .smallimage {
-      width: 5%;
-      height: 5%;
+      width: 2px;
+      height: 2px;
     }
   
 
