--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -95,14 +95,13 @@ p.bigLetter::first-letter {
 
 
     .smallimage {
-      width: 2px;
-      height: 2px;
+      width: 10px;
+      height: 10px;
     }
   
 
 
 footer {
-  background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'; 
+  background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'); 
   background-size: cover; 
-  background-repeat: no-repeat; 
 }
