--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -111,8 +111,8 @@ footer {
 }
 
 .layout {
-  width: 1366px;
-  height: 768px;
+  width: relative;
+  height: auto;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
