--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -111,8 +111,8 @@ footer {
 }
 
 .layout {
-  width: 50%;
-  height: 50%;
+  width: 1366px;
+  height: 768px;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
@@ -120,7 +120,27 @@ footer {
 }
 
 .section {
-  
+  position: relative;
+  overflow: hidden;
+}
+
+.section img {
+  max-width: 100%; 
+  height: auto; 
+  display: block; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+
+
+.section1,
+.section2,
+.section3,
+.section4 {
+  width: calc(50% - 4px); 
+  height: 100%;
 }
 
 .section1 {
