--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -111,8 +111,8 @@ footer {
 }
 
 .layout {
-  width: relative;
-  height: auto;
+  width: 1000px;
+  height: 736;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
