--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -125,13 +125,13 @@ footer {
 }
 
 .sectionimg {
-  max-width: 730px; 
+  max-width: 100%; 
   height: auto; 
   display: block; 
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
 }
 
 
