--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -111,8 +111,16 @@ p.bigLetter::first-letter {
 }
 
 .miniimage {
-width: 90%;
+width: 95%;
 height: auto:
+}
+
+.mediumimage{
+  wdith: 95%;
+  height: auto;
+}
+.centeredtext {
+  text-align: center;
 }
 
 footer {
