--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -115,8 +115,8 @@ width: 95%;
 height: auto:
 }
 
-.mediumimage{
-  wdith: 70%;
+.mediumimage {
+  width: 90%;
   height: auto;
 }
 .centeredtext {
