--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -50,6 +50,35 @@ p.bigLetter::first-letter {
     font-size: 250%;
 }
 
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #F62DAE;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8963BA;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #F05D23;
+  padding: 20px;
+}
 @media print {
     body,
     h1,
