--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -182,31 +182,36 @@ footer {
   transform: translate(-50%, -50%);
 }
 
+@media only screen and (min-width: 640px) {
 
-.section1,
-.section2,
-.section3,
-.section4 {
-  width: calc(50% - 4px); 
-  height: 100%;
+  .column {
+    padding: 16px;
+    margin: 5px;
+    background-color: #F62DAE;
+  }
+
+  #ProjectContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 400px;
+    padding: 25px 25px 25px 25px;
+
+    text-align: center;
+  }
 }
 
-.section1 {
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
-}
+@media only screen and (max-width: 640px) {
+  .column {
+    padding: 16px;
+    margin: 5px;
+    background-color: #F62DAE;
+  }
 
-.section2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-}
-
-.section3 {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-}
-
-.section4 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
+  #ProjectContent {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 25px 25px 25px 25px;
+    text-align: center;
+    height: 400px;
+  }
 }
