--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -150,12 +150,14 @@ height: auto:
 }
 
 .centeredtext {
+
   text-align: center;
 }
 
 footer {
   background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'); 
   background-size: cover; 
+  position: absolute;
   bottom: 0;
 }
 
