--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -155,6 +155,11 @@ height: auto:
 }
 
 footer {
+height: 50px;
+  width: 100%;
+  overflow: auto;
+  display: inline;
+  text-align: center;
   background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'); 
   background-size: cover; 
   bottom: 0;
