--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -135,17 +135,17 @@ input[type=submit]:hover {
 }
 
 .smallerimage {
-  width: 85%;
+  width: 65%;
   height: auto:
 }
 
 .miniimage {
-width: 85%;
+width: 65%;
 height: auto:
 }
 
 .mediumimage {
-  width: 86%;
+  width: 66%;
   height: auto;
 }
 
@@ -226,4 +226,9 @@ footer {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
   }
+}
+
+
+body {
+  margin: 1in 1in 1in 1in;
 }
