--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -192,6 +192,10 @@ footer {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
   }
+
+  body {
+    margin: .1in .1in .1in .1in;
+  }
 }
 
 @media only screen and (max-width: 640px) {
@@ -225,6 +229,10 @@ footer {
   .section4 {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+  }
+
+  body {
+    margin: .1in .1in .1in .1in;
   }
 }
 
