--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -1,9 +1,9 @@
 .resume-link {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #8963BA;
+    background-color: #F62DAE;
     color: #000;  
-    border: 2px solid #8963BA;
+    border: 2px solid #F62DAE;
     border-radius: 35px;
 }
 
