--- a/webdevelopment/style.css
+++ b/webdevelopment/style.css
@@ -153,7 +153,37 @@ height: auto:
 
   text-align: center;
 }
+table {
+  padding: 20px;
+  border: 2px solid #fff; 
+  border-radius: 10px; 
+  background-color: #F62DAE; 
+  width: 80%; 
+  max-width: relative; 
+}
+table {
+  width: 100%;
+  border-collapse: collapse; 
+}
+th, td {
+  border: 1px solid #fff; 
+  padding: 10px; 
+  text-align: center; 
+}
 
+thead th {
+  background-color: #F05D23; 
+  color: #fff; 
+}
+
+tbody tr:nth-child(even) {
+  background-color: #F62DAE;
+}
+
+tfoot td {
+  background-color: #6BD425; 
+  color: #fff;
+}
 footer {
   background-image: url('cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2pvYjEyODYtYmFja2dyb3VuZC0wOC5qcGc.jpg.webp'); 
   background-size: cover; 
@@ -250,35 +280,3 @@ body {
   background-color: #6BD425;
 }
 
-table {
-  margin: 20px;
-  padding: 20px;
-  border: 2px solid #8963BA; 
-  border-radius: 10px; 
-  background-color: #F62DAE; 
-  width: 80%; 
-  max-width: 600px; 
-}
-table {
-  width: 100%;
-  border-collapse: collapse; 
-}
-th, td {
-  border: 1px solid #F62DAE; 
-  padding: 10px; 
-  text-align: center; 
-}
-
-thead th {
-  background-color: #F05D23; 
-  color: #fff; 
-}
-
-tbody tr:nth-child(even) {
-  background-color: #F62DAE;
-}
-
-tfoot td {
-  background-color: #8963BA; 
-  color: #fff;
-}
